--- a/docker/artwork_server/Dockerfile
+++ b/docker/artwork_server/Dockerfile
@@ -6,3 +6,6 @@ RUN apt -y install python3-dev python3-pip default-libmysqlclient-dev
 RUN apt -y install libsm6 libxrender1 libxext-dev
 RUN pip3 install openpyxl numpy opencv-python pillow
 RUN pip3 install mysqlclient
+
+ENV MYSQL_HOST artwork_db
+ENV EDITMODE_HASH 8e40815dd2fbb5f31f65318cca782eecd7f8584a04d368da436aeb7c5c150b87
