--- a/docker/artwork_server/Dockerfile
+++ b/docker/artwork_server/Dockerfile
@@ -9,3 +9,5 @@ RUN pip3 install mysqlclient
 
 ENV MYSQL_HOST artwork_db
 ENV EDITMODE_HASH 8e40815dd2fbb5f31f65318cca782eecd7f8584a04d368da436aeb7c5c150b87
+
+ADD php.ini /usr/local/etc/php
