--- a/docker/artwork_server/Dockerfile
+++ b/docker/artwork_server/Dockerfile
@@ -3,9 +3,9 @@ FROM php:7.4.8-apache
 RUN apt update
 RUN docker-php-ext-install mysqli pdo_mysql
 RUN apt -y install python3-dev python3-pip default-libmysqlclient-dev
-RUN apt -y install libsm6 libxrender1 libxext-dev
+RUN apt -y install libgl1-mesa-dev
 RUN pip3 install --upgrade pip
-RUN pip3 install openpyxl numpy opencv-python
+RUN pip3 install openpyxl numpy opencv-python Pillow #Pillow is required for openpyxl
 RUN pip3 install mysqlclient
 
 ENV MYSQL_HOST artwork_db
