--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      EDITMODE_HASH: 
+      EDITMODE_HASH: ${EDITMODE_HASH}
 
 volumes:
   artwork_db_volume:
