--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ services:
     image: artwork_db
     container_name: artwork_db
     restart: always
-    command: --default-authentication-plugin=mysql_native_password
+    command: 
+      - --default-authentication-plugin=mysql_native_password
+      - --sql-mode=NO_ENGINE_SUBSTITUTION
     volumes: 
       - artwork_db_volume:/var/lib/mysql
     environment:
