--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     command: 
       - --default-authentication-plugin=mysql_native_password
       - --sql-mode=NO_ENGINE_SUBSTITUTION
+      - --character-set-server=utf8 
+      - --collation-server=utf8_unicode_ci
     volumes: 
       - artwork_db_volume:/var/lib/mysql
     environment:
